feat: initial porting of existing pages

--- a/content/_index.html
+++ b/content/_index.html
@@ -10,7 +10,11 @@
 
         <div class="card-list">
             <ul>
-                <li><a href="https://www.ivoa.net/about/what-is-vo.html">What is the VO?</a></li>
+                <li>
+                    <a href="{{<ref "pages/about/what_is_vo">}}">
+                    What is the VO?
+                    </a>
+                </li>
                 <li><a href="https://www.ivoa.net/about/what-is-ivoa.html">What is the IVOA?</a></li>
                 <li><a href="https://www.ivoa.net/about/member-organizations.html">Who is involved?</a></li>
                 <li><a href="https://www.ivoa.net/about/roadmap.html">Accomplishments and future plans</a></li>
@@ -26,7 +30,7 @@
 
         <div class="card-list">
             <ul>
-                <li><a href="https://www.ivoa.net/astronomers/getting_started.html">Getting Started</a></li>
+                <li><a href="{{<ref "pages/astronomers/getting_started">}}">Getting Started</a></li>
                 <li><a href="https://www.ivoa.net/astronomers/using_the_vo.html">Using the VO</a></li>
                 <li><a href="https://www.ivoa.net/astronomers/vo_glossary.html">VO Glossary</a></li>
                 <li><a href="https://www.ivoa.net/astronomers/applications.html">VO Applications</a></li>
