Apps initial version

--- a/content/_index.html
+++ b/content/_index.html
@@ -33,7 +33,7 @@
                 <li><a href="{{<ref "pages/astronomers/getting_started">}}">Getting Started</a></li>
                 <li><a href="https://www.ivoa.net/astronomers/using_the_vo.html">Using the VO</a></li>
                 <li><a href="https://www.ivoa.net/astronomers/vo_glossary.html">VO Glossary</a></li>
-                <li><a href="https://www.ivoa.net/astronomers/applications.html">VO Applications</a></li>
+                <li><a href="{{<ref "pages/astronomers/applications">}}">VO Applications</a></li>
                 <li><a href="https://www.ivoa.net/newsletter/index.html">IVOA newsletter</a></li>
                 <li><a href="https://www.ivoa.net/astronomers/vo_for_public.html">VO for Students & Public</a></li>
             </ul>
